--- a/operators/image_vec_rep_resnet/pyproject.toml
+++ b/operators/image_vec_rep_resnet/pyproject.toml
@@ -11,9 +11,24 @@ dependencies = [
     "pyinstrument>=5.0.0",
 ]
 
+
 [build-system]
-requires = ["hatchling"]
+requires = [
+    "hatchling",
+]
 build-backend = "hatchling.build"
 
+[tool.semantic_release]
+version_variable = [
+    "pyproject.toml:project.version",
+]
+
+[tool.semantic_release.branches.main]
+match = "main"
+prerelease = false
+tag_format = "{name}-{version}"
+
 [tool.hatch.build.targets.wheel]
-packages = ["."]
+packages = [
+    ".",
+]
