--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,24 +14,40 @@ dependencies = [
     "toml>=0.10.2",
 ]
 
+
+
+[project.optional-dependencies]
+dev = [
+    "python-semantic-release>=9.14.0",
+    "toml>=0.10.2",
+    "tomli>=2.2.1",
+    "tomli-w>=1.1.0",
+    "ruff>=0.8.3",
+    "pre-commit>=4.0.1",
+]
+
 [build-system]
-requires = ["hatchling"]
+requires = [
+    "hatchling",
+]
 build-backend = "hatchling.build"
 
 [tool.semantic_release]
-version_variable = ["src/__init__.py:__version__"]
-assets = [
-    "src/worker/vidvec/Dockerfile.video_worker",
-    "src/worker/audiovec/Dockerfile.audio_worker",
-    "src/worker/hash/Dockerfile.hash_worker",
+version_variable = [
+    "pyproject.toml:project.version",
 ]
-
-[tool.uv.workspace]
-members = ["operators/image_vec_rep_resnet"]
 
 [tool.semantic_release.branches.main]
 match = "main"
 prerelease = false
+tag_format = "{name}-{version}"
+
+[tool.uv.workspace]
+members = [
+    "operators/image_vec_rep_resnet",
+]
 
 [tool.hatch.build.targets.wheel]
-packages = ["feluda"]
+packages = [
+    "feluda",
+]
