--- a/.github/workflows/pr-security.yml
+++ b/.github/workflows/pr-security.yml
@@ -34,23 +34,23 @@ jobs:
       - name: Lint with Ruff
         uses: chartboost/ruff-action@e18ae971ccee1b2d7bbef113930f00c670b78da4 # v1.0.0
         with:
-          src: "./src"
+          src: "."
         continue-on-error: false
 
-      # - name: Run Trivy vulnerability scanner in repo mode
-      #   uses: aquasecurity/trivy-action@fd25fed6972e341ff0007ddb61f77e88103953c2 # v0.21.0
-      #   with:
-      #     scan-type: 'fs'
-      #     ignore-unfixed: true
-      #     format: 'sarif'
-      #     output: 'trivy-results.sarif'
-      #     limit-severities-for-sarif: true
-      #     severity: 'HIGH,CRITICAL'
-      #     scanners: 'vuln,misconfig,secret'
-      #     skip-dirs: '.vscode,docs'
-      #     exit-code: '1'
-      # - name: Upload Trivy scan results to GitHub Security tab
-      #   uses: github/codeql-action/upload-sarif@9fdb3e49720b44c48891d036bb502feb25684276 # v.3.25.6
-      #   if: always()
-      #   with:
-      #     sarif_file: 'trivy-results.sarif'
+      - name: Run Trivy vulnerability scanner in repo mode
+        uses: aquasecurity/trivy-action@fd25fed6972e341ff0007ddb61f77e88103953c2 # v0.21.0
+        with:
+          scan-type: 'fs'
+          ignore-unfixed: true
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          limit-severities-for-sarif: true
+          severity: 'HIGH,CRITICAL'
+          scanners: 'vuln,misconfig,secret'
+          skip-dirs: '.vscode,docs'
+          exit-code: '1'
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@9fdb3e49720b44c48891d036bb502feb25684276 # v.3.25.6
+        if: always()
+        with:
+          sarif_file: 'trivy-results.sarif'
