--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,7 @@ repos:
     hooks:
       # Run the linter.
       - id: ruff
+        stages: [pre-commit]
         # args: [--fix]
       # Run the formatter.
     #   - id: ruff-format
