--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dev = [
     "tomli-w>=1.1.0",
     "ruff>=0.8.3",
     "pre-commit>=4.0.1",
+    "pyproject-pre-commit[ruff]>=0.3.6"
 ]
 
 [build-system]
