refactor: minor change to overall code (#459)
* chore: remove uv.lock

* chore: remove pr tests action

* chore: updating ruff lint dir check

* fix: ruff checks

* chore: removing vscode folder

* chore: comment trivy action

* fix: ruff pre-commit

* chore: pyproject validator to pre-commit

* chore: checking pyproject validator to pre-commit

* revert: pre-commit file changes

* revert: pre-commit file changes

* chore: reseting image vec version

--- a/.github/workflows/pr-security.yml
+++ b/.github/workflows/pr-security.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Lint with Ruff
         uses: chartboost/ruff-action@e18ae971ccee1b2d7bbef113930f00c670b78da4 # v1.0.0
         with:
-          src: "./src"
+          src: "."
         continue-on-error: false
 
       # - name: Run Trivy vulnerability scanner in repo mode
