--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,17 +2,10 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v5.0.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
-
-  #   - repo: https://github.com/compilerla/conventional-pre-commit
-  #     rev: v3.6.0
-  #     hooks:
-  #       - id: conventional-pre-commit
-  #       - stages: [commit-msg]
-  #       - args: []
 
   - repo: https://github.com/commitizen-tools/commitizen
     rev: v3.9.1 # Use the latest version available
@@ -26,6 +19,7 @@ repos:
     hooks:
       # Run the linter.
       - id: ruff
+        stages: [pre-commit]
         # args: [--fix]
       # Run the formatter.
     #   - id: ruff-format
