--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.9.0"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "boto3>=1.35.63",
+    "boto3>=1.35.91",
     "dacite>=1.8.1",
     "pydub>=0.25.1",
     "pyyaml>=6.0.2",
@@ -13,6 +13,10 @@ dependencies = [
     "wget>=3.2",
     "toml>=0.10.2",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project.optional-dependencies]
 dev = [
@@ -25,15 +29,15 @@ dev = [
     "pyproject-pre-commit[ruff]>=0.3.6",
 ]
 
-[build-system]
-requires = [
-    "hatchling",
-]
-build-backend = "hatchling.build"
-
 [tool.semantic_release]
-version_variable = [
-    "pyproject.toml:project.version",
+version_variable = ["pyproject.toml:project.version"]
+
+[tool.uv.workspace]
+members = [
+    "operators/image_vec_rep_resnet",
+    "operators/vid_vec_rep_clip",
+    "operators/cluster_embeddings",
+    "operators/dimension_reduction",
 ]
 
 [tool.semantic_release.branches.main]
@@ -41,12 +45,5 @@ match = "main"
 prerelease = false
 tag_format = "{name}-{version}"
 
-[tool.uv.workspace]
-members = [
-    "operators/image_vec_rep_resnet",
-]
-
 [tool.hatch.build.targets.wheel]
-packages = [
-    "feluda",
-]
+packages = ["feluda"]
