--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -33,6 +33,11 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install .
+
       - name: Run all Feluda Unit Tests
         run: |
           echo "Running all Feluda Unit Tests folder..."
