--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "werkzeug>=3.1.3",
     "wget>=3.2",
     "toml>=0.10.2",
+    "pillow>=11.1.0",
+    "numpy>=2.2.1"
 ]
 
 [project.optional-dependencies]
