chore: adding script to validate pyproject.toml files

--- a/.github/workflows/pr-security.yml
+++ b/.github/workflows/pr-security.yml
@@ -37,6 +37,12 @@ jobs:
           src: "."
         continue-on-error: false
 
+      - name: Validate must contents in pyproject.toml
+        run: |
+          pip install tomli
+          python -m scripts.validate_toml_files
+
+
       # - name: Run Trivy vulnerability scanner in repo mode
       #   uses: aquasecurity/trivy-action@fd25fed6972e341ff0007ddb61f77e88103953c2 # v0.21.0
       #   with:
