--- a/operators/cluster_embeddings/pyproject.toml
+++ b/operators/cluster_embeddings/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.1"
 requires-python = ">=3.10"
 dependencies = [
     "scikit-learn>=1.6.0",
-    "numpy>=2.2.1",
+    "numpy<=2.0.0",
 ]
 
 [build-system]
