--- a/operators/image_vec_rep_resnet/pyproject.toml
+++ b/operators/image_vec_rep_resnet/pyproject.toml
@@ -5,7 +5,7 @@ requires-python = ">=3.10"
 dependencies = [
     "torch>=2.5.1",
     "torchvision>=0.20.1",
-    "numpy>=2.2.1",
+    "numpy<=2.0.0",
     "pillow>=11.1.0",
     "memray>=1.15.0",
     "pyinstrument>=5.0.0",
