--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.5"
 services:
   store:
     container_name: es
-    image: docker.elastic.co/elasticsearch/elasticsearch@sha256:ec72548cf833e58578d8ff40df44346a49480b2c88a4e73a91e1b85ec7ef0d44 # docker.elastic.co/elasticsearch/elasticsearch:8.12.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.16.0
     volumes:
       - ./.docker/es/data:/var/lib/elasticsearch/data
     ports:
@@ -65,39 +65,39 @@ services:
       queue:
         condition: service_started
 
-  indexer:
-    container_name: feluda_indexer
-    build:
-      context: ./src
-      dockerfile: Dockerfile
-      target: debug
-      args:
-        - "UID=${UID:-1000}"
-        - "GID=${GID:-1000}"
-    env_file: ./src/development.env
-    command: tail -f /dev/null
-    depends_on:
-      store:
-        condition: service_started
-      queue:
-        condition: service_started
+  # indexer:
+  #   container_name: feluda_indexer
+  #   build:
+  #     context: ./src
+  #     dockerfile: Dockerfile
+  #     target: debug
+  #     args:
+  #       - "UID=${UID:-1000}"
+  #       - "GID=${GID:-1000}"
+  #   env_file: ./src/development.env
+  #   command: tail -f /dev/null
+  #   depends_on:
+  #     store:
+  #       condition: service_started
+  #     queue:
+  #       condition: service_started
 
-  reporter:
-    container_name: feluda_reporter
-    build:
-      context: ./src
-      dockerfile: Dockerfile
-      target: debug
-      args:
-        - "UID=${UID:-1000}"
-        - "GID=${GID:-1000}"
-    env_file: ./src/development.env
-    command: tail -f /dev/null
-    depends_on:
-      store:
-        condition: service_started
-      queue:
-        condition: service_started
+  # reporter:
+  #   container_name: feluda_reporter
+  #   build:
+  #     context: ./src
+  #     dockerfile: Dockerfile
+  #     target: debug
+  #     args:
+  #       - "UID=${UID:-1000}"
+  #       - "GID=${GID:-1000}"
+  #   env_file: ./src/development.env
+  #   command: tail -f /dev/null
+  #   depends_on:
+  #     store:
+  #       condition: service_started
+  #     queue:
+  #       condition: service_started
 
 volumes:
     venv: {}
