--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,39 +65,39 @@ services:
       queue:
         condition: service_started
 
-  # indexer:
-  #   container_name: feluda_indexer
-  #   build:
-  #     context: ./src
-  #     dockerfile: Dockerfile
-  #     target: debug
-  #     args:
-  #       - "UID=${UID:-1000}"
-  #       - "GID=${GID:-1000}"
-  #   env_file: ./src/development.env
-  #   command: tail -f /dev/null
-  #   depends_on:
-  #     store:
-  #       condition: service_started
-  #     queue:
-  #       condition: service_started
+  indexer:
+    container_name: feluda_indexer
+    build:
+      context: ./src
+      dockerfile: Dockerfile
+      target: debug
+      args:
+        - "UID=${UID:-1000}"
+        - "GID=${GID:-1000}"
+    env_file: ./src/development.env
+    command: tail -f /dev/null
+    depends_on:
+      store:
+        condition: service_started
+      queue:
+        condition: service_started
 
-  # reporter:
-  #   container_name: feluda_reporter
-  #   build:
-  #     context: ./src
-  #     dockerfile: Dockerfile
-  #     target: debug
-  #     args:
-  #       - "UID=${UID:-1000}"
-  #       - "GID=${GID:-1000}"
-  #   env_file: ./src/development.env
-  #   command: tail -f /dev/null
-  #   depends_on:
-  #     store:
-  #       condition: service_started
-  #     queue:
-  #       condition: service_started
+  reporter:
+    container_name: feluda_reporter
+    build:
+      context: ./src
+      dockerfile: Dockerfile
+      target: debug
+      args:
+        - "UID=${UID:-1000}"
+        - "GID=${GID:-1000}"
+    env_file: ./src/development.env
+    command: tail -f /dev/null
+    depends_on:
+      store:
+        condition: service_started
+      queue:
+        condition: service_started
 
 volumes:
     venv: {}
