--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install dependencies for Semantic Versioning
         run: |
           python -m pip install --upgrade pip
-          pip install tomli tomli-w
+          pip install tomlkit
 
       - name: Get Base and Latest Commits of the Merged PR
         id: commit-range
