--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,7 @@ dependencies = [
 dev = [
     "python-semantic-release>=9.14.0",
     "toml>=0.10.2",
-    "tomli>=2.2.1",
-    "tomli-w>=1.1.0",
+    "tomlkit>=0.13.2",
     "ruff>=0.8.3",
     "pre-commit>=4.0.1",
     "pyproject-pre-commit[ruff]>=0.3.6",
